--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-ace-editor-wrapper",
+  "name": "@derek90/ngx-ace-editor-wrapper",
   "version": "12.2.16",
   "description": "A fork from ng2-ace-editor updated to work with Angular 12",
   "homepage": "https://github.com/martinpagesaal/ngx-ace-editor-wrapper",
@@ -48,15 +48,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinpagesaal/ngx-ace-editor-wrapper.git"
+    "url": "git+https://github.com/derek90/ngx-ace-editor-wrapper.git"
   },
   "keywords": [
     "ace",
     "angular",
-    "A9"
+    "A12"
   ],
-  "author": "Martin Page",
+  "author": "Derek Baker",
   "bugs": {
-    "url": "https://github.com/martinpagesaal/ngx-ace-editor-wrapper/issues"
+    "url": "https://github.com/derek90/ngx-ace-editor-wrapper/issues"
   }
 }
