--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-ace-editor-wrapper",
+  "name": "@derekbaker/ngx-ace-editor-wrapper",
   "version": "12.2.16",
   "description": "A fork from ng2-ace-editor updated to work with Angular 12",
   "homepage": "https://github.com/martinpagesaal/ngx-ace-editor-wrapper",
@@ -58,8 +58,5 @@
   "author": "Derek Baker",
   "bugs": {
     "url": "https://github.com/derek90/ngx-ace-editor-wrapper/issues"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/derekbaker"
   }
 }
